--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,11 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <div>
+      <form class="form-inline" method="POST" action="/login">
+        <input class="form-control" type="text" name="username" placeholder="Username" style="width: 200px; margin: 1em">
+        <button class="btn btn-outline-dark" href="/login">Login</button>
+      </form>
+    </div>
   </nav>
 </header>
