--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,11 +10,20 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if (!username) { %>
     <div>
       <form class="form-inline" method="POST" action="/login">
         <input class="form-control" type="text" name="username" placeholder="Username" style="width: 200px; margin: 1em">
-        <button class="btn btn-outline-dark" href="/login">Login</button>
+        <button type="submit" class="btn btn-outline-dark" href="/login">Login</button>
       </form>
     </div>
+    <% } else { %>
+      <div>
+        <form class="form-inline" method="POST" action="/logout">
+          Logged in as: <%= username %>
+          <button type="submit" class="btn btn-outline-dark" style="margin: 1em" href="/logout">Logout</button>
+        </form>
+      </div>
+      <% } %>
   </nav>
 </header>
