--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -18,7 +18,7 @@
         <input class="form-control mb-3" type="email" name="email" style="width: 300px">
         <label for="password">Password:</label>
         <input class="form-control mb-3" type="password" name="password" style="width: 300px">
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-outline-dark">Register</button>
         </form>
     </div>
   </main>
