--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -18,7 +18,8 @@
         <input class="form-control mb-3" type="email" name="email" style="width: 300px">
         <label for="password">Password:</label>
         <input class="form-control mb-3" type="password" name="password" style="width: 300px">
-        <button type="submit" class="btn btn-outline-dark">Login</button>
+        <button type="submit" class="btn btn-primary">Login</button>
+        
         </form>
     </div>
   </main>
