--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -8,10 +8,11 @@
 
 <body>
   <%- include('partials/_header') %>
+
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title">TinyURL for: <%= urls[shortURL].longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
     <div class="text-muted"></div>
@@ -24,7 +25,7 @@
       <form class="form-inline" style= "margin-left: 450px" action="/urls/<%= shortURL %>" method="POST">
         <div class="form-group mb-2">
           <label style="color:gray" for="longURL">New URL:</label>
-          <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+          <input class="form-control" type="text" name="updatedURL" placeholder="http://" style="width: 300px; margin: 1em">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
