--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,7 +22,7 @@
   <div class="card text-center">
     <div class="card-body">
       <h3 class="card-title" style="color: gray;"> Edit </h3>
-      <form class="form-inline" style= "margin-left: 450px" action="/urls/<%= shortURL %>" method="POST">
+      <form class="form-inline" style= "margin-left: 450px" action="/urls/<%= shortURL %>?_method=PUT" method="POST">
         <div class="form-group mb-2">
           <label style="color:gray" for="longURL">New URL:</label>
           <input class="form-control" type="text" name="updatedURL" placeholder="http://" style="width: 300px; margin: 1em">
